--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "cra-template-typescript": "1.2.0",
+    "native-base": "^3.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "^0.17.7",
     "react-scripts": "5.0.1"
   },
   "scripts": {
