--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template-typescript": "1.2.0",
     "native-base": "^3.4.3",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-native-safe-area-context": "^4.2.5",
