Apply `jq_eslintrc_add_tsx_to_react_jsx_filename_extension` to @utofun/ui

--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -22,5 +22,15 @@
     "react",
     "@typescript-eslint"
   ],
-  "rules": {}
+  "rules": {
+    "react/jsx-filename-extension": [
+      "error",
+      {
+        "extensions": [
+          ".jsx",
+          ".tsx"
+        ]
+      }
+    ]
+  }
 }
