--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -41,5 +41,21 @@
         "exceptions": []
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "rules": {
+        "import/no-unresolved": [
+          "off"
+        ],
+        "import/extensions": [
+          "off"
+        ]
+      }
+    }
+  ]
 }
