Apply `jq_eslintrc_ignore_custom_react_jsx_props_no_spreading` to @utofun/ui

--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -31,6 +31,15 @@
           ".tsx"
         ]
       }
+    ],
+    "react/jsx-props-no-spreading": [
+      "error",
+      {
+        "html": "enforce",
+        "custom": "ignore",
+        "explicitSpread": "ignore",
+        "exceptions": []
+      }
     ]
   }
 }
