Apply `jq_eslintrc_allow_stories_import_no_extraneous_dependencies` to @utofun/ui

--- a/packages/ui/.eslintrc.json
+++ b/packages/ui/.eslintrc.json
@@ -56,6 +56,21 @@
           "off"
         ]
       }
+    },
+    {
+      "files": [
+        "*.stories.tsx"
+      ],
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "error",
+          {
+            "devDependencies": [
+              "**/*.stories.tsx"
+            ]
+          }
+        ]
+      }
     }
   ]
 }
