--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "set -o errexit -o nounset -o xtrace; eslint '**/*.ts' '**/*.tsx'; tsc --noEmit; prettier --write --loglevel warn '**/*.js' '**/*.ts' '**/*.tsx'",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
