--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -72,5 +72,9 @@
     "eslint-plugin-storybook": "^0.5.11",
     "prettier": "^2.6.2",
     "webpack": "^5.72.0"
-  }
+  },
+  "main": "src/lib/index.tsx",
+  "files": [
+    "src/lib/*/index.tsx"
+  ]
 }
