--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.5.11",
     "prettier": "^2.6.2",
+    "typescript": "^4.6.4",
     "webpack": "^5.72.0"
   },
   "main": "src/lib/index.tsx",
