--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-storybook": "^0.5.11",
+    "postcss-preset-env": "^7.4.4",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "webpack": "^5.72.0"
