--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "set -o errexit -o nounset -o xtrace; eslint '**/*.ts' '**/*.tsx'; tsc --noEmit; prettier --write --loglevel warn '**/*.js' '**/*.ts' '**/*.tsx'",
     "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
+    "storybook": "DISABLE_ESLINT_PLUGIN=true start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "eslintConfig": {
