--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,7 +19,7 @@
     "test": "set -o errexit -o nounset -o xtrace; eslint '**/*.ts' '**/*.tsx'; tsc --noEmit; prettier --write --loglevel warn '**/*.js' '**/*.ts' '**/*.tsx'",
     "eject": "react-scripts eject",
     "storybook": "DISABLE_ESLINT_PLUGIN=true start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "DISABLE_ESLINT_PLUGIN=true build-storybook -s public"
   },
   "eslintConfig": {
     "extends": [
