--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "cra-template-typescript": "1.2.0",
+    "lodash": "^4.17.21",
     "native-base": "^3.4.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
